addons/info/style.css
/* ... */
.char_panel .tab5 .honorline {
	position:absolute;
	margin-top:100px;
	text-align:right;
	width:76px;
	font-size:13px;
	color:#999;
	font-weight:bold;
	overflow:hidden;
}
.char_panel .tab5 .honorline1 {
	position:absolute;
	margin:100px 0 0 75px;
	text-align:right;
	width:60px;
	font-size:13px;
	color:#FFF;
	font-weight:bold;
	overflow:hidden;
}
.char_panel .tab5 .honorline2 {
	position:absolute;
	margin:100px 0 0 135px;
	text-align:right;
	width:80px;
	font-size:13px;
	color:#FFF;
	font-weight:bold;
	overflow:hidden;
}
.char_panel .tab5 .honorline3 {
	position:absolute;
	margin:100px 0 0 255px;
	text-align:right;
	width:50px;
	font-size:13px;
	color:#FFF;
	font-weight:bold;
	overflow:hidden;
}




/**
 * Buff Icons
 */
.buff_icons { position:absolute;font:12px arial,helvetica,sans-serif;margin:55px 0 0 345px; }
.buff_icons .buff { position:relative;width:24px;height:24px; }
.buff_icons .buff span { position:absolute;bottom:-3px;right:1px;color:#fff;font-weight:bold;font-size:10px; }
.buff_icons .buff b { position:absolute;bottom:-4px;right:0px;color:#000;font-weight:bold;font-size:10px; }
.buff_icons .buff .icon { float:left;width:24px;height:24px;padding:1px 0 0 0; }


/**
 * Talent Page
 */
.talent_panel .background { position:absolute;margin-top:73px;margin-left:16px;width:318px;height:333px; }
.talent_panel .container { position:absolute;margin-top:73px;margin-left:16px;width:318px;height:333px;overflow:auto; }
.talent_panel .top_bar { position:absolute;margin-top:43px;margin-left:65px; }
.talent_panel .bot_bar { position:absolute;margin-top:402px;margin-left:12px; }
.talent_panel .points { text-align:right;position:absolute;margin-top:48px;margin-left:70px;width:250px; }
.talent_panel .link { text-align:left;position:absolute;margin-top:411px;margin-left:25px;width:145px; }
.talent_panel .points_unused { text-align:right;position:absolute;margin-top:411px;margin-left:172px;width:150px; }
.talent_panel .points_unused .label { color:#ffdd00; }
.talent_panel .row { height:40px;margin-top:15px; }
.talent_panel .rank_icon { position:absolute;margin-top:31px;margin-left:30px; }
.talent_panel .rank_text { position:absolute;font-size:12px;margin-top:31px;margin-left:35px;cursor:default; }
.talent_panel .cell { float:left;width:40px;height:40px;margin-left:25px; }

/* Grey out unused talents */
/* filter:gray only works in IE so we do this to half-assed transparency for Mozilla and Opera */
.talent_panel .icon_grey { filter:gray;opacity:0.5; }


/**
 * Character Page styles
**/
.questtype {
	float:left;
	height:12px;
	padding:10px 2px 2px 10px;
	font:bold 12px verdana,arial,sans-serif;
	color:#ffffff;
}
.quest_link a {
	text-align:center;
	padding-left:3px;
	padding-right:3px;
	margin-left:2px;
	margin-right:2px;
	border:solid #5D5D5D;
	border-width:1px 0 0 1px;
	background-color:#2E2D2B;
	text-decoration:none;
}
/* Links in menu on-click */
.quest_link a:active { background-color:#778899; }

/* Links in menu on-mouseover */
.quest_link a:hover { background-color:#7A7772; }



/**
 * SPELLBOOK - function show_spellbook()
**/

/* Background image for character tab */
.spell_panel .background {
	background:url(images/spellbook/panel.jpg) no-repeat;
	width:323px;
	height:357px;
	position:absolute;
	margin-left:14px;
	margin-top:72px;
}
/* Style and placement of Back Page Button */
.spell_panel .page_back, .spell_panel .page_back_off {
	text-align:left;
	font-weight:bold;
	width:100px;
	position:absolute;
	margin-top:390px;
	margin-left:30px;
	cursor:pointer;
}
.spell_panel .page_back_off { cursor:default;color:#808080; }
/* Style and placement of Back Page Button */
.spell_panel .page_back .navicon { width:23px;height:22px; }

/* Style and placement of Forward Page Button */
.spell_panel .page_forward, .spell_panel .page_forward_off {
	text-align:right;
	font-weight:bold;
	width:100px;
	position:absolute;
	margin-top:390px;
	margin-left:220px;
	cursor:pointer;
}
.spell_panel .page_forward_off { cursor:default;color:#808080; }
/* Style and placement of Back Page Button */
.spell_panel .page_forward .navicon { width:23px;height:22px; }

/* Style and placement of Back Page Button */
.spell_panel .pagenumber {
	color:#ffd200;
	text-align:center;
	font-weight:bold;
	width:100px;
	position:absolute;
	margin-top:400px;
	margin-left:120px;
}

/* Spellbook Navagation tabs */
.skill_types { position:absolute;font:11px arial,helvetica,sans-serif;margin:58px 0 0 344px;line-height:normal; }
.skill_types ul { margin:0;padding:0;list-style:none; }
.skill_types li { background:url(images/spellbook/skilltab.gif) no-repeat left top;margin:0;padding:1px 0 0 1px;cursor:pointer;height:49px;width:38px; }
.skill_types .icon { display:block;width:34px;height:34px;margin:8px 0 0 1px; }

/* Position of the spells on the left side */
.spell_panel .container_1 { position:absolute;margin-top:80px;margin-left:20px; }
/* Position of the spells on the right side */
.spell_panel .container_2 { position:absolute;margin-top:80px;margin-left:180px; }
/* Spell Info container */
.spell_panel .info_container { width:155px;height:42px; }
/* Spell Icon */
.spell_panel .info_container .icon { width:40px;height:40px; }
/* Spell Icon text */
.spell_panel .info_container .text { font:10px arial,helvetica,sans-serif;text-align:left;position:absolute;margin-top:4px;margin-left:4px; }

